working with svg styles

--- a/src/app/symbol-list/symbol-list.component.html
+++ b/src/app/symbol-list/symbol-list.component.html
@@ -8,7 +8,7 @@
     </button>
   </mat-card-title-group>
   <mat-divider class = "toolbarDivider"></mat-divider>
-  <span *ngIf= "symbolsLength == 0"> ..creating Lis of Symbols</span>
+  <span *ngIf= "symbolsLength == 0"> ..creating List of Symbols</span>
   <!--<mat-list-item *ngFor="let symbol of symbols | keyvalue" class = "mat-list-item active" >
     <button mat-icon-button (click)="changeCurrentSymbol(img)" > <img src = {{img.value}} > {{ img.key}}
     </button>
