--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -8,3 +8,30 @@
   position: absolute;
 }
 
+.tooltip  {
+  position: relative;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 4px !important;
+  color: white;
+  padding: 4px 8px;
+  opacity: 0.7;
+  white-space: nowrap;
+}
+.tooltip-measure {
+  opacity: 1;
+  font-weight: bold;
+}
+.tooltip-measure:before,
+.tooltip-static:before {
+  border-top: 6px solid rgba(0, 0, 0, 0.5);
+  border-right: 6px solid transparent;
+  border-left: 6px solid transparent;
+  content: "";
+  position: absolute;
+  bottom: -6px;
+  margin-left: -7px;
+  left: 50%;
+}
+.tooltip-static:before {
+  border-top-color: #ffcc33;
+}
