progress edit insert/update/delete disable temporary save button

--- a/src/app/editing-toolbar/editing-toolbar.component.html
+++ b/src/app/editing-toolbar/editing-toolbar.component.html
@@ -56,10 +56,10 @@
               [ngClass]="actionActive['showSymbols'] ? 'active': 'normal'">
         <mat-icon   aria-label="">category</mat-icon>
       </button>
-      <button mat-icon-button (click)="saveLayer()" matTooltip = "Save all edits into the layers/disable pending #TODO">
+      <button [disabled]="stopSave" mat-icon-button (click)="saveLayer()" matTooltip = "Save all edits into the layers/disable pending #TODO">
         <mat-icon>save_alt</mat-icon>
       </button>
-      <button mat-icon-button (click)="saveLayer()" matTooltip = "Save all edits in all layers">
+      <button  [disabled]="stopSaveAll" mat-icon-button (click)="saveAllLayer()" matTooltip = "Save all edits in all layers">
         <mat-icon>save</mat-icon>
       </button>
       <span class = "spacer"></span>
