--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -14,9 +14,9 @@
     <button mat-icon-button aria-labelledby="Show Layer Panel" matTooltip="Show List of layers" (click)="createScratchLayer()" >
       <mat-icon class="svgIconToolbar">layers</mat-icon>
     </button>
-    <button mat-icon-button aria-labelledby="Edit layers" matTooltip="Edit layers" (click)="layerEditingChange()">
+    <!--<button mat-icon-button aria-labelledby="Edit layers" matTooltip="Edit layers" (click)="layerEditingChange()">
       <mat-icon>edit</mat-icon>
-    </button>
+    </button> !-->
     <button mat-icon-button aria-labelledby="Add a scratch layer" matTooltip="Add a scratch layer" (click)="createScratchLayer()" >
     <mat-icon class="svgIconToolbar" svgIcon="layerScratch"></mat-icon>
     </button>
