--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,4 +1,7 @@
 <div id="map" class="map">
+  <div data-tooltip="algo" id ='info'>  <!--class="tooltip" id="info" -->
+    <span id=spanTool class = "tooltiptext"></span>
+  </div>
 </div>
 <app-layer-panel [editLayers]="loadedWfsLayers" (layerVisClick)="updateMapVisibleLayer($event)"
 (editLayerClick)="updateEditingLayer($event)"
