--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -7,7 +7,7 @@
   z-index: 0;
   position: absolute;
 }
-
+/*
 .tooltip  {
   position: relative;
   background: rgba(0, 0, 0, 0.5);
@@ -34,4 +34,63 @@
 }
 .tooltip-static:before {
   border-top-color: #ffcc33;
+} */
+::ng-deep .ol-tooltip {
+  position: relative;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 4px;
+  color: white;
+  padding: 4px 8px;
+  opacity: 0.7;
+  white-space: nowrap;
+  font-size: 12px;
+}
+::ng-deep .ol-tooltip-measure {
+  opacity: 1;
+  font-weight: bold;
+}
+::ng-deep .ol-tooltip-static {
+  background-color: #ffcc33;
+  color: black;
+  border: 1px solid white;
+}
+::ng-deep .ol-tooltip-measure:before,
+.ol-tooltip-static:before {
+  border-top: 6px solid rgba(0, 0, 0, 0.5);
+  border-right: 6px solid transparent;
+  border-left: 6px solid transparent;
+  border-top-color: #ffcc33;
+  content: "";
+  position: absolute;
+  bottom: -6px;
+  margin-left: -7px;
+  left: 50%;
+}
+::ng-deep .ol-tooltip-static:before {
+  border-top-color: #ffcc33;
+}
+#info {
+  position: absolute;
+  height: 1px;
+  width: 1px;
+  z-index: 100;
+  border: 2px solid white;
+}
+[data-tooltip]:before {
+  position : absolute;
+  content : attr(data-tooltip);
+  opacity : 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid #646464;
+}
+[data-tooltip]:hover:before {
+  opacity : 1;
+}
+.hide {
+  position: absolute;
+  height: 0px;
+  width: 0px;
+  z-index: 100;
+  opacity:0;
 }
