--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -94,3 +94,12 @@
   z-index: 100;
   opacity:0;
 }
+#progress {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 2px;
+  background: rgba(0, 60, 136, 0.4);
+  width: 0;
+  transition: width 250ms;
+}
