--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -11,7 +11,7 @@
     <button matTooltip="Zoom to the study area" aria-labelledby="Zoom to the study area" mat-icon-button (click)="zoomHome()">
       <mat-icon>home</mat-icon>
     </button>
-    <button mat-icon-button aria-labelledby="Show Layer Panel" matTooltip="Show List of layers" (click)="createScratchLayer()" >
+    <button mat-icon-button aria-labelledby="Show Layer Panel" matTooltip="Show List of layers" (click)="openLayerPanel()" >
       <mat-icon class="svgIconToolbar">layers</mat-icon>
     </button>
     <!--<button mat-icon-button aria-labelledby="Edit layers" matTooltip="Edit layers" (click)="layerEditingChange()">
