--- a/src/app/layer-panel/layer-panel.component.scss
+++ b/src/app/layer-panel/layer-panel.component.scss
@@ -1,22 +1,17 @@
-
 .closeIcon :hover {
   background-color: #e35183;  //to focus the icons
 }
-
 .editIcon {
   font-size: 1vw;
   text-align: center;
-  //vertical-align: top !important;
-  width: 1.5vw !important;
-  height:  1.5vw !important;
   padding-top: 0;
+  padding-left: 0;
   margin-top: 0;
   padding-right: 0;
 }
 .editIcon :hover {
   background-color: #fff2e1 !important;
 }
-
 .spacer {
   flex: 1 1 auto;
 }
@@ -35,7 +30,7 @@
   width: 100%;
   //max-width: 20%;
   position: relative;
-  padding-left: 1.1vw !important;
+  padding-left: 0.1vw !important;
 }
 .group {
   color: rgba(0, 20, 0, 0.87);
@@ -53,7 +48,7 @@
   padding-bottom: 0px !important;
   height:1.2vw !important;
 }
-.selectList{
+.selectLayer{
   display:flex;
   justify-content:space-between;
   align-items: left; //center;
@@ -103,6 +98,12 @@
   height:1.2vw !important;
 }
 
+:host ::ng-deep .mat-card {
+  //padding: 0 !important;
+  padding: 0px;
+  //height:1.2vw !important;
+}
+
 // to remove the padding on the text of the list
 :host ::ng-deep .mat-list-text {
   padding-left: 4px !important;  // rigth left
@@ -121,6 +122,27 @@
   background: blue !important;
 }
 
+:host ::ng-deep .mat-icon-button {
+  width: 1.3vw !important;
+}
+.panelTitle {
+  padding-left: 1vw;
+  padding-top: 0.2vw;
+}
 .active {
   background: #fff2e1;
+}
+:host ::ng-deep .mat-expansion-panel-header {
+  padding: 0 8px;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: #e9e9e9;
+  flex: 1 1 auto;
+}
+
+:host ::ng-deep  .mat-expansion-panel:not([class*=mat-elevation-z]) {
+  box-shadow: 0px 0px 0px 0px;
+}
+:host ::ng-deep .mat-expansion-panel-body {
+  padding: 0 24px 6px;
 }
