--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -8,5 +8,5 @@
 <app-layer-panel [editLayers]="loadedWfsLayers"  [groupLayers] = "groupsLayers"
                  (layerVisClick)="updateMapVisibleLayer($event)"
 (editLayerClick)="updateEditingLayer($event)"  (groupLayerVisClick)="updateMapVisibleGroupLayer($event)"
-(layersOrder) = "updateOrderVisibleLayers($event)"></app-layer-panel>
+(layersOrder) = "updateOrderGroupsLayers($event)"></app-layer-panel>
 
