--- a/src/app/symbol-list/symbol-list.component.html
+++ b/src/app/symbol-list/symbol-list.component.html
@@ -19,7 +19,7 @@
      <div id = "+{{symbol.key}}"  (click)="updateActivesymbol(symbol)"
       [ngClass]="symbolActiveKey == symbol.key? 'active': 'normal'" >
       <canvas id ={{symbol.key}} class="canvasSymbol" #cmp></canvas>
-      <span> {{symbol.key}} </span>
+      <span> {{symbol.value.label}} </span>
      </div>
   </div>
 
