--- a/src/styles.scss
+++ b/src/styles.scss
@@ -48,3 +48,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; overflow: h
   margin-top: -3px;  // To center the icon in the wrapper
   padding-right: 0;
 }
+
+.imgInfo{
+  width:100%;
+  max-width:100px;
+  max-height:100px;
+}
